Add calculation based on github user data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+#WARN Credentials are passed directly only for demo purposes
+spring.datasource.username=sa
+spring.datasource.password=
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#WARN ddl-auto set to update only for demo purposes
+spring.jpa.hibernate.ddl-auto= update
+
+#WARN console enabled only for demo purposes
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-ui
